--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,8 @@
         "https://*/*"
     ],
     "options_ui": {
-        "page": "options.html"
+        "page": "options.html",
+        "open_in_tab": true
     },
     "browser_action": {},
     "icons": {
