--- a/package.json
+++ b/package.json
@@ -5,28 +5,26 @@
         "build": "webpack --mode production"
     },
     "devDependencies": {
-        "@babel/core": "^7.7.7",
-        "@types/chrome": "0.0.114",
-        "@types/react": "^16.9.35",
-        "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^2.30.0",
-        "@typescript-eslint/parser": "^2.30.0",
-        "copy-webpack-plugin": "^6.0.1",
-        "css-loader": "^3.4.1",
-        "eslint": "^6.8.0",
-        "node-sass": "^4.13.0",
-        "sass-loader": "^8.0.0",
-        "source-map-loader": "^0.2.4",
-        "style-loader": "^1.1.2",
+        "@babel/core": "^7.12.9",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.9.0",
+        "@typescript-eslint/parser": "^4.9.0",
+        "copy-webpack-plugin": "^6.3.2",
+        "css-loader": "^5.0.1",
+        "eslint": "^7.14.0",
+        "node-sass": "^5.0.0",
+        "sass-loader": "^10.1.0",
+        "style-loader": "^2.0.0",
         "svg-inline-loader": "^0.8.2",
-        "ts-loader": "^6.2.1",
-        "typescript": "^3.7.5",
-        "webpack": "^4.41.5",
-        "webpack-cli": "^3.3.10"
+        "ts-loader": "^8.0.11",
+        "typescript": "^4.1.2",
+        "webpack": "^5.9.0",
+        "webpack-cli": "^4.2.0",
+        "@types/chrome": "0.0.126"
     },
-    "description": "",
     "dependencies": {
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
     }
 }
